@@ -1,5 +1,17 @@
 2008-11-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	DNSCache is now part of DownloadEngine.
+	* src/DNSCache.h
+	* src/DownloadEngine.cc
+	* src/DownloadEngine.h
+	* src/InitiateConnectionCommand.cc
+	* src/MultiUrlRequestInfo.cc
+	* test/Makefile.am
+	* test/Makefile.in
+	* test/SimpleDNSCacheTest.cc
+
+2008-11-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Removed SingletonHolder of CUIDCounter. CUIDCounter is now part of
 	DownloadEngine.
 	* src/ActivePeerConnectionCommand.cc
